# reddit-tui

./: Cargo.toml  README.md
src/: app.rs  error.rs  events.rs  lib.rs  main.rs  media.rs  models.rs  reddit.rs  reddit_client.rs  ui.rs
tests/: app_flow.rs
tests/fixtures/: comments.json  posts.json
