[package]
name = "reddit-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0.102"
tokio = { version = "1", features = ["rt-multi-thread"] }
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png", "webp"] }
